--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <title>Title</title>
 </head>
 <body>
-
+<header>
+    <nav>
+        <ul>
+            <li>Nav item1</li>
+            <li>Nav item2</li>
+        </ul>
+    </nav>
+</header>
 </body>
 </html>
