--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
 <body>
 <header>
     <nav>
+        <p>Use this navigation</p>
         <ul>
             <li>Nav item1</li>
             <li>Nav item2</li>
+            <li>Nav item3</li>
         </ul>
     </nav>
 </header>
