--- a/index.html
+++ b/index.html
@@ -13,5 +13,9 @@
         </ul>
     </nav>
 </header>
+<section>
+    <h2>About us</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi, totam!</p>
+</section>
 </body>
 </html>
