--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
         <ul>
             <li>Nav item1</li>
             <li>Nav item2</li>
-            <li>Nav item3</li>
         </ul>
     </nav>
 </header>
+<footer>
+    Lorem ipsum dolor sit amet.
+</footer>
 <section>
     <h2>About us</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi, totam!</p>
