--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         <ul>
             <li>Nav item1</li>
             <li>Nav item2</li>
+            <li>Nav item3</li>
+            <li>Nav item4</li>
         </ul>
     </nav>
 </header>
