--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
 <body>
 <header>
     <nav>
-        <p>Use this navigation</p>
+        <p>Use this navigation for navigation</p>
         <ul>
             <li>Nav item1</li>
             <li>Nav item2</li>
             <li>Nav item3</li>
+            <li>Nav item4</li>
         </ul>
     </nav>
 </header>
