--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
 <body>
 <header>
     <nav>
-        <p>Use this navigation</p>
+        <h5>Navigate here</h5>
         <ul>
             <li>Nav item1</li>
             <li>Nav item2</li>
-            <li>Nav item3</li>
         </ul>
     </nav>
 </header>
@@ -20,7 +19,7 @@
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi, totam!</p>
 </section>
 <footer>
-    Lorem ipsum dolor sit amet.
+    Lorem ipsum dolor sit amet pisum sipsmum.
 </footer>
 </body>
 </html>
