--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 <header>
     <nav>
-        <h1>Sim racing</h1>
+        <h1>Sim racing - anatec</h1>
         <p>Use this navigation for navigation</p>
         <ul>
             <li>Nav item1</li>
