--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <li>Nav item2</li>
             <li>Nav item3</li>
             <li>Nav item4</li>
+            <li>Nav item5</li>
         </ul>
     </nav>
 </header>
