nav item update

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <h1>Sim racing - Fanatec</h1>
         <p>Use this navigation for navigation</p>
         <ul>
-            <li>Wheels</li>
+            <li>Wheels / Elite</li>
             <li>Bases</li>
             <li>Pedals</li>
             <li>Sifters</li>
