--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         <h1>Sim racing - Fanatec</h1>
         <p>Use this navigation for navigation</p>
         <ul>
-            <li>Wheels / Elite</li>
-            <li>Bases</li>
+            <li>Wheels / Club sport</li>
+            <li>Bases / Elite</li>
             <li>Pedals</li>
             <li>Sifters</li>
             <li>Nav item5</li>
