--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <p>Use this navigation for navigation</p>
         <ul>
             <li>Wheels / Elite</li>
-            <li>Bases</li>
-            <li>Pedals</li>
+            <li>Bases / Elite</li>
+            <li>Pedals / Club sport</li>
             <li>Sifters</li>
             <li>Nav item5</li>
         </ul>
