quick fix for real

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <ul>
             <li>Wheels / Club sport</li>
             <li>Bases / Elite</li>
-            <li>Pedals</li>
+            <li>Pedals / Elite</li>
             <li>Sifters</li>
             <li>Nav item5</li>
         </ul>
