--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
     <h2>About us</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi, totam!</p>
 </section>
+<section>
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus ad assumenda blanditiis, delectus dolor doloremque ducimus inventore ipsa iure minus nam nesciunt nisi omnis optio pariatur quos repudiandae sit voluptates.
+</section>
 <footer>
     Lorem ipsum dolor sit amet pisum sipsmum.
 </footer>
