--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <li>Wheels / Club sport</li>
             <li>Bases / Elite</li>
             <li>Pedals / Elite</li>
+            <li>Shifters</li>
             <li>Sifters</li>
         </ul>
     </nav>
