--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <header>
     <nav>
         <h1>Sim racing - Fanatec</h1>
+        <div>This web is on fire</div>
         <p>Use this navigation for navigation</p>
         <ul>
             <li>Wheels / Club sport</li>
