--- a/index.html
+++ b/index.html
@@ -8,14 +8,13 @@
 <header>
     <nav>
         <h1>Sim racing - Fanatec</h1>
-        <div>This web is on fire</div>
         <p>Use this navigation for navigation</p>
         <ul>
             <li>Wheels / Club sport</li>
             <li>Bases / Elite</li>
             <li>Pedals / Elite</li>
-            <li>Shifters</li>
-            <li>Sifters</li>
+            <li>Shifters / Club sport</li>
+            <li>Accessories</li>
         </ul>
     </nav>
 </header>
