--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
             <li>Wheels / Club sport</li>
             <li>Bases / Elite</li>
             <li>Pedals / Elite</li>
-            <li>Shifters / Club sport</li>
-            <li>Accessories</li>
+            <li>Shifters</li>
         </ul>
     </nav>
 </header>
