--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <h1>Sim racing - Fanatec</h1>
         <p>Use this navigation for navigation</p>
         <ul>
-            <li>Wheels / Club sport</li>
+            <li>Wheels / Club sport / Elite</li>
             <li>Bases / Elite</li>
             <li>Pedals / Elite</li>
             <li>Shifters</li>
